nginx/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployement
  labels:
    app: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-server
        image: parichaydidwania/nginx:v1
        ports:
        - containerPort: 80
