nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
spec:
  selector:
    app: nginx-app
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 80
    nodePort: 31110
